--- a/modulo3/node-js/react/ejercicio-2/contador/src/App.css
+++ b/modulo3/node-js/react/ejercicio-2/contador/src/App.css
@@ -1,27 +1,37 @@
 .App {
   text-align: center;
+  background-color: #282c34; /* Fondo oscuro */
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  animation: App-logo-spin infinite var(--rotation-duration, 20s) linear;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #1e1e1e;
+  padding: 30px;
+  border-radius: 20px;
+  width: 90%;
+  max-width: 600px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.App-title {
+  font-size: 2.5em;
+  margin: 0.2em 0 1em 0;
+  color: #61dafb;
+  font-weight: bold;
 }
 
 .App-link {
@@ -35,4 +45,46 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.counter-screen {
+  margin-bottom: 1em;
+  display: block;
+  font-size: 3rem;
+  font-weight: bolder;
+  background-color: #333;
+  padding: 20px;
+  color: #61dafb;
+  border-radius: 10px;
+  
+  text-align: center;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.buttons button {
+  padding: 12px 20px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  background-color: #61dafb;
+  color: #20849f;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.buttons button:hover {
+  background-color: #0b354f;
+  color: #9cd0de;
+}
+
+.buttons button:active {
+  background-color: #0e70a1;
+  transform: scale(0.98);
 }
